iaroapp/static/css/singin-signup.css
body {
    background-color: #e9ebe6 !important;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    font-family: Inter, serif !important;
}

.container-fluid {
    display: flex;
    justify-content: center;
}

.card {
    width: 400px !important;
}

.logo-container {
    margin-bottom: 1.5rem;
    padding-bottom: 10px;
    border-bottom: 1px solid;
    border-image-slice: 1;
    border-image-source: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0) 100%);
}

.input-group-text {
    border-right: 1px solid #d0d4d8 !important;
    width: 40px !important;
    justify-content: center;
    border-radius: 8px 0 0 8px !important;
}

.form-control {

    padding-left: 1rem !important;
    border-radius: 0 8px 8px 0 !important;
}


.remember-forgot {
    display: flex;
    justify-content: space-between;
    align-items: center;
    text-align: center;
}

.remember-forgot .form-check {
    display: flex;
    align-items: center;
}

.form-check {
    margin-bottom: 0;
}

.remember-forgot .form-check-label {
    margin-left: 0.5rem;
    margin-bottom: 0;
}

.form-check-input {
    width: 1em !important;
    height: 1em !important;
    margin-bottom: 0.250rem;
}

hr.my-2 {
    border-top: 1px solid rgba(0, 0, 0, 0.3) !important;
    margin-top: 0.5rem !important;
    margin-bottom: 0.5rem !important;
}

